# basetype

./: CMakeLists.txt  README.md
algor/: vcrypto.cpp  vcrypto.h  vcryptomd5.cpp  vcryptomd5.h  vcryptosha1.cpp  vcryptosha1.h
base/: vbasisalgor.cpp  vbasisalgor.h  vbasistime.h  vbytes.cpp  vbytes.h  vdefines.h  vendian.h  vstring.cpp  vstring.h  vtypes.h
